[metadata]
name = pyship-pkg-variable-vacancy
version = 0.1
author = VariableVacancy
author_email = a.zhang.vvork@gmail.com
description = A small battleship minigame
url = https://github.com/VarVac/PyShip
classifiers =
    programming Language :: Python :: 3
    License :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src